--- a/css/popup.css
+++ b/css/popup.css
@@ -1,15 +1,15 @@
 body {
   min-width:400px;
   overflow-x:hidden;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 #header {
   background-color: #507AAA;
   color: #F8F8F8;
   padding-left: 3px;
-  height: 20px;
+  height: 25px;
 }
 
 #header img {
